--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -32,16 +32,16 @@ jobs:
         # An explicit key for restoring and saving the cache
         key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
         # An ordered list of keys to use for restoring stale cache if no cache hit occurred for key. Note `cache-hit` returns false in this case. Optional
-        restore-keys: | 
-          ${{ runner.os }}-pip-
+        # restore-keys: | 
+        #   ${{ runner.os }}-pip-
         # The chunk size used to split up large files during upload, in bytes
         # upload-chunk-size: # optional
         # An optional boolean when enabled, allows windows runners to save or restore caches that can be restored or saved respectively on other platforms
-        enableCrossOsArchive: False # optional, default is false
+        # enableCrossOsArchive: False # optional, default is false
         # Fail the workflow if cache entry is not found
-        fail-on-cache-miss: False # optional, default is false
+        # fail-on-cache-miss: False # optional, default is false
         # Check if a cache entry exists for the given input(s) (key, restore-keys) without downloading the cache
-        lookup-only: False # optional, default is false
+        # lookup-only: False # optional, default is false
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
